# jSACSMA

./: .zenodo.json  CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
src/jsacsma/: __init__.py  config.py  extractor.py  forcing_adapter.py  losses.py  model.py  parameters.py  postprocessor.py  preprocessor.py  runner.py  sacsma.py
src/jsacsma/calibration/: __init__.py  optimizer.py  parameter_manager.py  worker.py
tests/: test_losses_nan_safe.py  test_model.py  test_parameters.py  test_registration.py  test_sacsma.py  test_snow17.py
